# jinair

./: .gitignore  README.md  app-crawler.py  app.py  pyproject.toml  qna_0708.csv  server.py  sparse_encoder.pkl
api/: QnA.py  README.md  __init__.py  chitchat.py  flight_search.py  scraper.py
backend/: api.py  crawler.py
backend/callbacks/: __init__.py  flight_condition.py  streamlit.py
backend/chains/: __init__.py  chitchat.py  flights.py  intents.py  rag.py  web_scraper.py
backend/embeddings/: __init__.py  embeddings_bm25.py  hybrid.py
